--- a/Serem Landing page/style.css
+++ b/Serem Landing page/style.css
@@ -6,7 +6,7 @@
 
 body {
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-        url("https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fHBvcnRmb2xpb3xlbnwwfHwwfHx8MA%3D%3D");
+        url("serem back.avif");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
