--- a/Registration Survey Form/style.css
+++ b/Registration Survey Form/style.css
@@ -152,7 +152,7 @@ button:focus {
 body {
     background-image:
         linear-gradient(115deg, rgba(58, 58, 158, 0.8), rgba(136, 136, 206, 0.7)),
-        url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
+        url(survey-form-background.jpeg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
